2008-04-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Fixed problem #499761 (search window cleared when column sorted)

2008-04-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	Added gnome_cmd_file_list_get_column_default_width() function

2008-04-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-menu.cc:
	Added icon to 'Help|Keyboard Shortcuts' menu entry

2008-04-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Fixed problem #499764 (multiple selection problem)

2008-04-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-key-shortcuts-dialog.cc:
	* src/gnome-cmd-user-actions.cc:
	Write modified shortcuts to config file

	* src/eggcellrendererkeys.cc:
	* src/eggcellrendererkeys.h:
	* src/gnome-cmd-key-shortcuts-dialog.cc:
	Properly handle CAPSLOCK and Super keys in shortcuts dialog

	* src/gnome-cmd-user-actions.cc:
	Replaced previous default binding (CTRL+~) for view.home with SHIFT+CTRL+~
	(<shift><control>asciitilde), as for the previous one didn't work at all.

2008-04-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	Added support for GDK_grave key

	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-user-actions.cc:
	Define CTRL+Q binding as user definable (file.exit)

2008-04-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/eggcellrendererkeys.cc:
	* src/eggcellrendererkeys.h:
	* src/gnome-cmd-user-actions.cc:
	Do not use gtk_accelerator_get_label() for representing accelerators

2008-04-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Added new key binding: SUPER+F for file search

2008-04-07  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* src/eggcellrendererkeys.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Support for <super>, <hyper> and <meta> modifiers (since GTK+ 2.10)

2008-04-02  Piotr Eljasiak  <epiotr@use.pl>
