@@ -594,7 +594,7 @@ static void autoscroll_if_appropriate (GnomeCmdFileSelector *fs, gint x, gint y)
         if (fs->priv->autoscroll_timeout) return;
         fs->priv->autoscroll_dir = FALSE;
         fs->priv->autoscroll_y = y;
-        fs->priv->autoscroll_timeout = gtk_timeout_add (gnome_cmd_data_get_gui_update_rate (), (GtkFunction)do_scroll, fs);
+        fs->priv->autoscroll_timeout = g_timeout_add (gnome_cmd_data_get_gui_update_rate (), (GSourceFunc) do_scroll, fs);
     }
     else if (y > smax)
     {
@@ -602,7 +602,7 @@ static void autoscroll_if_appropriate (GnomeCmdFileSelector *fs, gint x, gint y)
         fs->priv->autoscroll_dir = TRUE;
         fs->priv->autoscroll_y = y;
         fs->priv->autoscroll_timeout =
-            gtk_timeout_add (gnome_cmd_data_get_gui_update_rate (), (GtkFunction)do_scroll, fs);
+            g_timeout_add (gnome_cmd_data_get_gui_update_rate (), (GSourceFunc) do_scroll, fs);
     }
     else
     {
@@ -1758,7 +1758,7 @@ void gnome_cmd_file_selector_set_connection (GnomeCmdFileSelector *fs, GnomeCmdC
         fs->priv->con_opening = con;
 
         create_con_open_progress_dialog (fs);
-        gtk_timeout_add (gnome_cmd_data_get_gui_update_rate (), (GtkFunction)update_con_open_progress, fs);
+        g_timeout_add (gnome_cmd_data_get_gui_update_rate (), (GSourceFunc) update_con_open_progress, fs);
 
         gnome_cmd_con_open (con);
     }
